[package]
name = "dbt-cloud-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0.156", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_yaml = "0.9.19"
serde_json = "1.0"
treediff = { version = "4", features = ["with-serde-json"] }
colored = "2"
dialoguer = "0.10.3"
